# chihuahua-os

./: .gitignore  LICENSE.md  Makefile  README.md
boot_info/: Cargo.toml
boot_info/src/: framebuffer.rs  lib.rs  memory_map.rs
bootloader/: Cargo.toml  Makefile  rust-toolchain.toml
bootloader/src/: efi_mem_map.rs  graphics_config.rs  kernel_loader.rs  kernel_reader.rs  main.rs  paging.rs  phys_memory_map.rs  raw_mem_map.rs  sys_config_reader.rs
k_core_mods/k_panic_handler/src/: fb_writer.rs
k_corelib/: Cargo.toml
k_corelib/src/: boot_info.rs  interrupts.rs  lib.rs  log.rs  platform_initializer.rs  ports.rs
k_corelib/src/arch/x86_64/: gdt.rs  gdt_tss.rs  idt.rs  mod.rs  ports.rs
k_corelib/src/interrupts/: cpu_exceptions.rs  mod.rs  pic_interrupts.rs  x86_64_pic_interrupts.rs
k_corelib/src/k_drivers/x86_64/: mod.rs
k_corelib/src/k_drivers/x86_64/com_debug/: mod.rs
k_corelib/src/k_drivers/x86_64/pic/: mod.rs
k_corelib/src/mem_manager/: mod.rs  pmm.rs  vmm.rs
k_corelib/src/renderer/: mod.rs  text_writer.rs
k_lib/: Cargo.toml
k_lib/src/: ports.rs
k_panic_handler/: Cargo.toml
k_panic_handler/src/: lib.rs
kernel/: Cargo.toml  Makefile  x86_64-unknown-chihuahuaos-none.json  x86_64-unknown-dogos-dog.json
kernel/.cargo/: config.toml
kernel/res/: Tamsyn8x16r.psf  buildinfo.txt
kernel/src/: init_text.rs  lib.rs  multiboot2_initializer.rs
kernel/src/boot/: boot_long.asm  grub.cfg  init.asm  linker.ld  multiboot_header.asm
kernel/src/k_drivers/: mod.rs
kernel/src/k_drivers/com_debug/: mod.rs
kernel/src/renderer/: mod.rs
libs/dog_essentials/: Cargo.toml
libs/dog_essentials/src/: format_non_alloc.rs  lib.rs  pointer_ops.rs  static_cell.rs
libs/dog_essentials/src/geometry/: rect.rs
libs/dog_essentials/src/sync/: mod.rs  mutex.rs  raw_mutex.rs
libs/elf/: Cargo.toml
libs/elf/src/: elf_file.rs  elf_header.rs  lib.rs
libs/paginator/: Cargo.toml
libs/paginator/src/: ChihuahuaPageTable.rs  lib.rs
libs/psf/: Cargo.toml
libs/psf/src/: ascii_psf_font.rs  lib.rs
run/: mount.sh
