[package]
name = "k_corelib"
version = "0.1.0"
edition = "2024"

[dependencies]
boot_info = { path = "../boot_info" }
k_panic_handler = { path = "../k_panic_handler" }
dog_essentials = { path = "../libs/dog_essentials" }
psf = { path = "../libs/psf" }
x86_64 = { version = "0.15.2" }
r-efi = "5.3.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[lib]
crate-type = ["staticlib", "rlib"]
test = false
doctest = false
bench = false