[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
k_corelib = { path = "../k_corelib" }
boot_info = { path = "../boot_info" }
dog_essentials = { path = "../libs/dog_essentials" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
strip = true        # Strip symbols from binary

[lib]
crate-type = ["staticlib"]
test = false
doctest = false
bench = false